@@ -14,6 +14,7 @@
 
 package com.starrocks.schema;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Maps;
 
 import java.util.List;
@@ -29,7 +30,7 @@ import java.util.Map;
  */
 public class MSchema {
     public static final MTable EMPS = new MTable("emps", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid      INT         NOT NULL",
                     "deptno     INT         NOT NULL",
                     "locationid INT         NOT NULL",
@@ -44,7 +45,7 @@ public class MSchema {
                     "(3, 1, 2, 2, 'emp_name1', 150)");
 
     public static final MTable EMPS_NO_CONSTRAINT = new MTable("emps_no_constraint", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid      INT         NOT NULL",
                     "deptno     INT         NOT NULL",
                     "locationid INT         NOT NULL",
@@ -58,7 +59,7 @@ public class MSchema {
                     "(3, 1, 2, 2, 'emp_name1', 150)");
 
     public static final MTable EMPS_BIGINT = new MTable("emps_bigint", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid      BIGINT         NOT NULL",
                     "deptno     BIGINT         NOT NULL",
                     "locationid BIGINT         NOT NULL",
@@ -72,7 +73,7 @@ public class MSchema {
                     "(3, 1, 2, 2, 'emp_name1', 150)");
 
     public static final MTable EMPS_NULL = new MTable("emps_null", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid      INT         NULL",
                     "deptno     INT         NULL",
                     "locationid INT         NULL",
@@ -85,14 +86,14 @@ public class MSchema {
                     "(2, 1, 2, 2, 'emp_name1', 120), " +
                     "(3, 1, 2, 2, 'emp_name1', 150)");
     public static final MTable EMPS_PAR = new MTable("emps_par", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid int not null",
                     "deptno int not null",
                     "name varchar(25) not null",
                     "salary double"
             ),
             "deptno",
-            List.of(
+            ImmutableList.of(
                     "PARTITION p1 VALUES [(\"-2147483648\"), (\"2\"))",
                     "PARTITION p2 VALUES [(\"2\"), (\"3\"))",
                     "PARTITION p3 VALUES [(\"3\"), (\"4\"))"
@@ -100,7 +101,7 @@ public class MSchema {
     );
 
     public static final MTable DEPTS = new MTable("depts", "deptno",
-            List.of(
+            ImmutableList.of(
                     "deptno int not null",
                     "name varchar(25) not null"
             )
@@ -109,7 +110,7 @@ public class MSchema {
             .withValues("(1, 'dept_name1'), (2, 'dept_name2'), (3, 'dept_name3')");
 
     public static final MTable DEPTS_NULL = new MTable("depts_null", "deptno",
-            List.of(
+            ImmutableList.of(
                     "deptno int null",
                     "name varchar(25) null"
             )
@@ -118,14 +119,14 @@ public class MSchema {
             .withValues("(1, 'dept_name1'), (2, 'dept_name2'), (3, 'dept_name3')");
 
     public static final MTable DEPENDENTS = new MTable("dependents", "empid",
-            List.of(
+            ImmutableList.of(
                     "empid int not null",
                     "name varchar(25) not null"
             )
     ).withValues("(1, 'dependent_name1')");
 
     public static final MTable LOCATIONS = new MTable("locations", "locationid",
-            List.of(
+            ImmutableList.of(
                     "locationid INT NOT NULL",
                     "state CHAR(2)",
                     "name varchar(25) not null"
@@ -134,7 +135,7 @@ public class MSchema {
             .withValues("(1, 1, 'location1')");
 
     public static final MTable TEST_ALL_TYPE = new MTable("test_all_type", "t1a",
-            List.of(
+            ImmutableList.of(
 
                     "  `t1a` varchar(20) NULL",
                     "  `t1b` smallint(6) NULL",
@@ -152,7 +153,7 @@ public class MSchema {
 
 
     public static final MTable TABLE_WITH_PARTITION = new MTable("table_with_partition", "t1a",
-            List.of(
+            ImmutableList.of(
                     "  `t1a` varchar(20) NULL",
                     "  `id_date` date NULL",
                     "  `t1b` smallint(6) NULL",
@@ -160,7 +161,7 @@ public class MSchema {
                     "  `t1d` bigint(20) NULL"
             ),
             "id_date",
-            List.of(
+            ImmutableList.of(
                     "PARTITION p1991 VALUES [('1991-01-01'), ('1992-01-01'))",
                     "PARTITION p1992 VALUES [('1992-01-01'), ('1993-01-01'))",
                     "PARTITION p1993 VALUES [('1993-01-01'), ('1994-01-01'))"
@@ -171,7 +172,7 @@ public class MSchema {
             "('varchar3', '1993-02-01', 3, 1, 1)");
 
     public static final MTable TABLE_WITH_DAY_PARTITION = new MTable("table_with_day_partition", "t1a",
-            List.of(
+            ImmutableList.of(
                     "  `t1a` varchar(20) NULL",
                     "  `id_date` date NULL",
                     "  `t1b` smallint(6) NULL",
@@ -179,7 +180,7 @@ public class MSchema {
                     "  `t1d` bigint(20) NULL"
             ),
             "id_date",
-            List.of(
+            ImmutableList.of(
                     "PARTITION p19910330 VALUES [('1991-03-30'), ('1991-03-31'))",
                     "PARTITION p19910331 VALUES [('1991-03-31'), ('1991-04-01'))",
                     "PARTITION p19910401 VALUES [('1991-04-01'), ('1991-04-02'))",
@@ -192,14 +193,14 @@ public class MSchema {
             "('varchar3', '1991-04-02', 4, 1, 1)");
 
     public static final MTable TEST_BASE_PART = new MTable("test_base_part", "c1",
-            List.of(
+            ImmutableList.of(
                     "c1 int",
                     "c2 bigint",
                     "c3 bigint",
                     "c4 bigint"
             ),
             "c3",
-            List.of(
+            ImmutableList.of(
                     " partition p1 values less than ('100')",
                     " partition p2 values less than ('200')",
                     " partition p3 values less than ('1000')",
@@ -209,7 +210,7 @@ public class MSchema {
     );
 
     public static final MTable T0 = new MTable("t0", "v1",
-            List.of(
+            ImmutableList.of(
                     "  `v1` bigint NULL",
                     "  `v2` bigint NULL",
                     "  `v3` bigint NULL"
@@ -217,13 +218,13 @@ public class MSchema {
     ).withValues("(1, 2, 3)");
 
     public static final MTable T1 = new MTable("t1", "k1",
-            List.of(
+            ImmutableList.of(
                     "  `k1` int(11) NULL",
                     "  `v1` int(11) NULL",
                     "  `v2` int(11) NULL"
             ),
             "k1",
-            List.of(
+            ImmutableList.of(
                     "PARTITION p1 VALUES [('-2147483648'), ('2'))",
                     "PARTITION p2 VALUES [('2'), ('3'))",
                     "PARTITION p3 VALUES [('3'), ('4'))",
@@ -236,13 +237,13 @@ public class MSchema {
             " ,(3,1,1),(3,1,2),(3,1,3),(3,2,1),(3,2,2),(3,2,3),(3,3,1),(3,3,2),(3,3,3)");
 
     public static final MTable JSON_TBL = new MTable("json_tbl", "p_dt",
-            List.of(
+            ImmutableList.of(
                     "  `p_dt` date NULL",
                     "  `d_user` json NULL "
             )
     ).withValues("('2020-01-01', '{'a': 1, 'gender': 'man'}')");
 
-    public static final List<MTable>  TABLE_MARKETING = List.of(
+    public static final List<MTable>  TABLE_MARKETING = ImmutableList.of(
             EMPS,
             EMPS_NULL,
             EMPS_BIGINT,
